Fri Feb 28 07:59:51 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * debian/debian.changelog:
        * debian/debian.control:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Make x.2.5 public and prepare for next release

        * ace/config-win32-borland.h:
          Improved C++BuilderXE support

Fri Feb 28 08:46:21 CET 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.5 released.

Tue Feb 25 09:32:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
        * tests/run_test.pl:
          Changed the way we enable coverity test separation, introduced
          new Coverity test config instead of commandline option

Mon Feb 24 11:31:01 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Throughput_Stats.cpp:
          Fixed compile warning

Mon Feb 24 09:39:49 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Throughput_Stats.cpp:
          Guard for a divide by zero, triggered by the TAO Event
          Service tests on Windows on more recent hardware

Fri Feb 21 15:05:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Process_Env_Test.cpp:
          Use LM_ERROR with ACE_ERROR

Fri Feb 21 10:09:00 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_33_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New compiler feature test to validate that a switch with char
          works as it should

Fri Feb 21 07:31:21 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/debian.changelog:
        * debian/debian.control:
        * debian/patches/series:
        * debian/patches/reduce-doxygen-doc.diff:
          Fixed debian packaging, thanks to Michael Dille
          <mdille3 at andrew dot cmu dot edu> for providing
          the patches
